deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discussions
spec:
  selector:
    app: discussions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
