deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discussions
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: skylabworld.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discussions
            port:
              number: 80
